tests/compile_fail/inverse_nobool.stderr
error: `field's type` is incompatible with `inverse_arg`.
 --> $DIR/inverse_nobool.rs:9:9
  |
9 |     pub value: f64,
  |         ^^^^^
